# python-codext

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  README.md  _config.yml  front.yml  index.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-encoding.yml
.github/prompts/: add_codec.prompt.md
.github/workflows/: publish-package.yml  pypi-publish.yml  python-package.yml
codext/: __common__.py  __info__.py  __init__.py  _base.py  _base2n.py  ascii85.py  barbie.py  base.py  base100.py  base122.py  base85.py  dna.py  leetspeak.py  macros.json  markdown.py  morse.py  nokia3310.py  rotn.py  xor_byte.py
codext/base/: __init__.py  _base.py  _base2n.py  ascii85.py  base100.py  base122.py  base45.py  base85.py  base91.py  baseN.py
codext/binary/: __init__.py  baudot.py  bcd.py  excess3.py  manchester.py  rotate.py
codext/common/: __init__.py  a1z26.py  cases.py  dummy.py  hashes.py  octal.py  ordinal.py
codext/compressions/: __init__.py  gzipp.py  lz77.py  lz78.py  pkzip.py
codext/crypto/: __init__.py  affine.py  atbash.py  bacon.py  barbie.py  citrix.py  railfence.py  rot.py  rotn.py  scytale.py  shift.py  xor.py  xor_byte.py
codext/hashing/: __init__.py  blake.py  checksums.py  crypt.py  shake.py
codext/languages/: __init__.py  braille.py  galactic.py  ipsum.py  leetspeak.py  morse.py  navajo.py  radio.py  southpark.py  tap.py  tomtom.py
codext/others/: __init__.py  baudot.py  dna.py  dummy.py  gray.py  gzipp.py  html.py  letters.py  markdown.py  octal.py  ordinal.py  ordinals.py  url.py  uuencode.py
codext/stegano/: __init__.py  hexagram.py  klopf.py  leetspeak.py  nokia.py  resistor.py  rick.py  sms.py  whitespace.py
codext/web/: url.py
docs/: ADDING_CODECS.md  base.md  binary.md  ciphers.md  cli.md  common.md  encodings.md  features.md  guessing.md  howto.md  index.md  languages.md  manipulations.md  mkdocs.yml  others.md  requirements.txt  stegano.md
docs/enc/: base.md  binary.md  common.md  compressions.md  crypto.md  hashing.md  languages.md  others.md  stegano.md
docs/pages/: cli.md  features.md  guessing.md  howto.md  index.md  manipulations.md
docs/pages/enc/: base.md  binary.md  common.md  crypto.md  hashing.md  languages.md  others.md  stegano.md  web.md
src/codext/: VERSION.txt  __common__.py  __info__.py  __init__.py  _guess.py
src/codext/base/: __init__.py  _base.py  _base2n.py  base100.py  base122.py  base45.py  base85.py  base91.py  baseN.py
src/codext/binary/: __init__.py  baudot.py  bcd.py  excess3.py  gray.py  manchester.py  rotate.py
src/codext/checksums/: __init__.py  adler.py  crc.py  luhn.py
src/codext/common/: __init__.py  a1z26.py  cases.py  dummy.py  octal.py  ordinal.py
src/codext/compressions/: __init__.py  gzipp.py  lz78.py  pkzip.py
src/codext/crypto/: __init__.py  affine.py  atbash.py  autoclave.py  bacon.py  barbie.py  bazeries.py  beaufort.py  citrix.py  phillips.py  playfair.py  polybius.py  railfence.py  rot.py  scytale.py  shift.py  trithemius.py  vic.py  vigenere.py  xor.py
src/codext/hashing/: __init__.py  blake.py  checksums.py  crypt.py  md.py  mmh3.py  sha.py  shake.py
src/codext/languages/: __init__.py  braille.py  galactic.py  ipsum.py  leetspeak.py  morse.py  multitap.py  navajo.py  radio.py  southpark.py  tap.py  tomtom.py
src/codext/others/: __init__.py  dna.py  kbshift.py  letters.py  markdown.py  uuencode.py
src/codext/stegano/: __init__.py  hexagram.py  klopf.py  resistor.py  rick.py  sms.py  whitespace.py
src/codext/web/: __init__.py  html.py  quoted_printable.py  url.py
tests/: test_affine.py  test_ascii85.py  test_atbash.py  test_bacon.py  test_barbie.py  test_base.py  test_baudot.py  test_braille.py  test_common.py  test_dna.py  test_dummy.py  test_generated.py  test_html.py  test_leetspeak.py  test_manual.py  test_markdown.py  test_morse.py  test_nokia.py  test_octal.py  test_ordinal.py  test_ordinals.py  test_radio.py  test_resistor.py  test_rot.py  test_rotn.py  test_scytale.py  test_shift.py  test_sms.py  test_url.py  test_whitespace.py  test_xor.py  test_xorn.py
