[metadata]
name = codext
version = file: codext/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/python-codext
description = Native codecs extension
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    codecs
    encodings
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    markdown2==2.3.10; python_version=='2.7' # rq.filter: >=2.4.0
    markdown2>=2.4.0; python_version>='3.6'
    six
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts = 
    codext = codext:main
