[metadata]
name = codext
version = file: codext/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/python-codext
description = Native codecs extension
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    codecs
    encodings
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    markdown2==2.3.10; python_version=='2.7' # rq.filter: >=2.4.0
    markdown2>=2.4.0; python_version>='3.6'
    six
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts = 
    base2 = codext.base.baseN:main2
    base3 = codext.base.baseN:main3
    base4 = codext.base.baseN:main4
    base8 = codext.base.baseN:main8
    base16 = codext.base.baseN:main16
    base32 = codext.base.baseN:main32
    base32-hex = codext.base.baseN:main32hex
    base32-geohash = codext.base.baseN:main32geo
    base32-z = codext.base.baseN:mainz32
    base36 = codext.base.baseN:main36
    base45 = codext.base.base45:main
    base58-bitcoin = codext.base.baseN:main58bc
    base58-ripple = codext.base.baseN:main58rp
    base58-flickr = codext.base.baseN:main58fl
    base62 = codext.base.baseN:main62
    base63 = codext.base.baseN:main63
    base64 = codext.base.baseN:main64
    base64-url = codext.base.baseN:main64url
    base67 = codext.base.baseN:main67
    base85 = codext.base.base85:main
    base91 = codext.base.base91:main
    base100 = codext.base.base100:main
    base122 = codext.base.base122:main
    codext = codext.__init__:main
    debase = codext.base.__init__:main
